# DexUMI-Origami

./: README.md  pyproject.toml
dexumi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dexumi/common/utility/: zarr.py
dexumi/data_recording/: numeric_recorder.py  video_recorder.py
